# AuthorForge_Solid

./: ANVIL_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  Cargo.toml  EMBER_IMPLEMENTATION_COMPLETE.md  EMBER_TOOLBOX_INTEGRATION.md  FONTSIZE_CONTROL_TEMPLATE_ERROR_FIX.md  FONT_SCALE_SYSTEM.md  GRAPH_CONTEXT_PANEL_TEMPLATE_ERROR_FIX.md  HEARTH_FOUNDRY_NAVIGATION_FLOW.md  HEARTH_REFACTORING_ANALYSIS.md  HEARTH_REFACTOR_COMPLETE.md  HEARTH_VISUAL_COMPARISON.md  HYDRATION_FIX_SUMMARY.md  NAVIGATION_ENHANCEMENTS_COMPLETE.md  NAVIGATION_REFACTORING_SUMMARY.md  SMITHY_FORMATTING_IMPLEMENTATION.md  SMITHY_RESPONSIVE_LAYOUT.md  SOLIDJS_TEMPLATE_ERROR_FIX.md  STORY_ARC_GRAPH_ENHANCEMENTS.md  TEMPERING_BLOOM_WORKSPACE_GUIDE_ADDITION.md  TEMPERING_OPTIMIZATION_REPORT.md  TEMPERING_P0_P1_IMPLEMENTATION_SUMMARY.md  WORKSPACE_GUIDE_EXPANSION.md  app.config.ts  package-lock.json  package.json  root.css  tailwind.config.cjs
.claude/: todo.md
ai/: tasks.todo.md
backend-rs/: Cargo.toml  DATABASE.md
backend-rs/crates/llm_context/: Cargo.toml
backend-rs/crates/llm_context/src/: lib.rs
backend-rs/crates/lore_parser/: Cargo.toml
backend-rs/crates/lore_parser/src/: calendar.rs  gazetteer.rs  lib.rs  linker.rs  parser.rs  patterns.rs  types.rs  util.rs
backend-rs/crates/shared/: Cargo.toml
backend-rs/crates/shared/src/: error.rs  lib.rs  types.rs
backend-rs/crates/world_builder/: Cargo.toml
backend-rs/crates/world_builder/src/: character_arc.rs  lib.rs  models.rs
backend-rs/lore/rules/: calendar.mythos.yaml  calendar.yaml  entities.mythos.yaml  entities.yaml  patterns.yaml
backend-rs/migrations/: 20250111000001_create_locations.sql  20250111000002_create_factions.sql  20250115000003_create_character_arcs.sql
backend-rs/src/: lib.rs  main.rs
backend-rs/tests/: persistence_test.rs
plugins/: authorforge.tailwind.js
public/: favicon.avif
(+86 files in other folders)
