[workspace]
members = [
  "backend-rs",
  "backend-rs/crates/shared",
  "backend-rs/crates/llm_context",
  "backend-rs/crates/world_builder",
  "backend-rs/crates/lore_parser"
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["macros", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "time"] }