[package]
name = "backend-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

llm_context = { path = "crates/llm_context" }
lore_parser = { path = "crates/lore_parser" }
world_builder = { path = "crates/world_builder" }
