[package]
name = "lore_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
regex = "1"
aho-corasick = "1"
serde_yaml = "0.9"
unicode-segmentation = "1"
itertools = "0.13"
